# Jacob_Ladder

./: .gitmodules  1_15_0_launch.sh  1_15_OF.params  Dockerfile_ddsagent  Dockerfile_harmonic-jammy  Dockerfile_opencv  Dockerfile_rqtimage  README.md  front_approach_launch.sh  front_land.sh  gz_test.sh  moving_launch.sh  simlaunch.py  test_launch.sh
docker/: Dockerfile_base-jammy-arm64  Dockerfile_harmonic-jammy  Dockerfile_humble-arm64  Dockerfile_ros2-humble  Dockerfile_with_xrce_agent
gazebo/: README.md
gazebo/models/aruco_marker_id0/: model.config  model.sdf
gazebo/models/aruco_marker_id1/: model.config  model.sdf
gazebo/models/moving_platform/: model.sdf
gazebo/models/x500_dual_cam/: model.config  model.sdf
gazebo/worlds/: aruco_dual_ids.sdf
src/precision_land/: CMakeLists.txt  FrontApproach.cpp  FrontApproach.hpp  FrontApproachPIDPrecisionLand.cpp  FrontApproachPIDPrecisionLand.hpp  FrontApproachPrecisionLandCombined.cpp  FrontApproachPrecisionLandCombined.hpp  PrecisionLand.cpp  TrackFollow.cpp  TrackFollow.hpp  TrackFollow1.cpp  TrackFollow1.hpp  TrackFollow2.cpp  TrackFollow2.hpp  front_approach.py
src/precision_land/cfg/: front_approach_params.yaml  front_approach_pid_params.yaml  front_to_precision_params.yaml
src/precision_land/launch/: front_approach.launch.py  front_approach_pid_precision_land.launch.py  front_to_precision_land.launch.py  track_follow.launch.py
src/simenv_launch/: aruco_env.py
